# competitive_programming_console

./: .gitignore  CMakeLists.txt  README.md  atcoder.bat  attach_now.py  bot_atcoder.py  bot_codeforces.py  bot_codejam.py  bot_cp.py  codeforces.bat  codejam.bat  custom_judge.py  hash_code_header.h  hashcode_main.cpp  input.txt  input_injection.py  local_testing_tool.py  sol.cpp  sol.py  sol_0.cpp  sol_0.py  sol_a.cpp  sol_a.py  sol_b.cpp  sol_b.py  sol_c.cpp  sol_c.py  sol_d.cpp  sol_d.py  sol_e.cpp  sol_f.cpp
libs/: atmaxflow.h  binsegtree.h  combinatorics.h  dsu.h  fenwick.h  geo2D.h  graphs.h  maxflow.h  num_theory.h  rq.h  segtree.h  strproc.h  suff_arr.h  test_imports.h  trie_aho.h
python/: helper_daemon.py  main_j.py  main_p.py  main_t.py  main_y.py  project_root.py
python/j/: __init__.py
python/j/pickles_txt/: all.h  shared_vars.py
python/p/pickles_txt/: all.h
python/t/: __init__.py
python/t/pickles_txt/: all.h
python/tools/: __init__.py  cpp2python.h  input_processing.py  naming_files_folders.py  parsetxt.h  parsetxt.py  pickling.py  reinitialize_repo.py  submission.py  terminal_helper.py
python/tools/mip_examples/: n-queens.py  tsp-compact.py
